tests/parser/bug_78/invalid_11.m
% (c) Copyright 2020 Florian Schanda

% Error: Command form cannot start with ... (but it could contain it)
disp ...
   foo
